tests/negative/test_fixed_redef_local.orb
fixed Foo i32;

fnc main () () {
    fixed::global Foo bool;
};